// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/IconButton > Default 1`] = `
<div>
  <div
    data-dark="false"
  >
    <button
      class="charcoal-icon-button"
      data-active="false"
      data-size="M"
      data-variant="Default"
      title="add"
    >
      <pixiv-icon
        class="charcoal-icon"
        data-charcoal-icon-size="16"
        name="16/Add"
        style="--charcoal-icon-ssr-size: 16px;"
      />
    </button>
  </div>
</div>
`;

exports[`Storybook Tests > react/IconButton > IsActive 1`] = `
<div>
  <div
    data-dark="false"
  >
    <button
      class="charcoal-icon-button"
      data-active="true"
      data-size="M"
      data-variant="Default"
    >
      <pixiv-icon
        class="charcoal-icon"
        data-charcoal-icon-size="16"
        name="16/Add"
        style="--charcoal-icon-ssr-size: 16px;"
      />
    </button>
  </div>
</div>
`;

exports[`Storybook Tests > react/IconButton > Overlay 1`] = `
<div>
  <div
    data-dark="false"
  >
    <button
      class="charcoal-icon-button"
      data-active="false"
      data-size="M"
      data-variant="Overlay"
    >
      <pixiv-icon
        class="charcoal-icon"
        data-charcoal-icon-size="16"
        name="16/Add"
        style="--charcoal-icon-ssr-size: 16px;"
      />
    </button>
  </div>
</div>
`;
